# oci-srm-server-mock-rust

./: Cargo.toml  Dockerfile  Makefile  default.nix  flake.nix  try-server.http
.github/workflows/: ci.yml  publish-docker-image-to-github-registry.yml  release-on-milestone-closed-triggering-release-event.yml
src/: main.rs
