# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "oci-srm-server-mock"
version = "0.1.0"
edition = "2021"

[dependencies]
# Main HTTP framework, used to configure routing and set up aqn HTTP server
actix-web = "^4.1.2"

# Serialization: convert things from/to JSON
serde = { version = "^1.0.147", features = ["derive"] }
serde_json = "^1.0.87"

# Parse URLs into values
url = { version = "^2.3.1", features = ["serde"] }
urlencoding = "^2.1.2"

uuid = { version = "^1.2.1", features = ["v4"] }
chrono = "^0.4.22"

# HTTP Client
reqwest = { version = "^0.11.12", features = ["blocking", "json"] }

# Static analysis
no-panic = "^0.1.16"

# Async handling, mutex
tokio = "^1.21.2"