# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "oci-srm-server-mock"
version = "0.1.0"
edition = "2021"

[dependencies]
# Main HTTP framework, used to configure routing and set up aqn HTTP server
actix-web = "^4.3.1"

# Serialization: convert things from/to JSON
serde = { version = "^1.0.176", features = ["derive"] }
serde_json = "^1.0.104"

# Parse URLs into values
url = { version = "^2.4.0", features = ["serde"] }
urlencoding = "^2.1.3"

uuid = { version = "^1.4.1", features = ["serde", "v4"] }
chrono = "^0.4.26"

# HTTP Client
hyper = { version = "^0.14.27", features = ["full"] }
hyper-trust-dns = { version = "^0.5.0", features = ["system-config"] }
# thiserror 1.0.37 includes nightly-only `provide_any` rust feature
thiserror = "=1.0.44"

# Static analysis
no-panic = "^0.1.26"

# Async handling, mutex
tokio = "^1.29.1"

[profile.release]
opt-level = "z"     # Optimize for size. This app is not performance-sensitive, but downloaded often.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
strip = true        # Automatically strip symbols from the binary.
